Finish CV content

--- a/index.html
+++ b/index.html
@@ -78,6 +78,106 @@
 
     <section>
       <h2>Formations</h2>
+      <article>
+        <h3>Diplôme supérieur d’Arts Appliqués Design interactif</h3>
+        <p>
+          <em>2015 - 2017</em><br />
+          <strong>Pôle supérieur de Design</strong><br />
+          Villefontaine (38)
+        </p>
+      </article>
+      <article>
+        <h3>BTS design graphique Médias numériques</h3>
+        <p>
+          <em>2013 - 2015</em><br />
+          <strong>Lycée Jeanne d’Arc</strong><br />
+          Rouen (76)
+        </p>
+      </article>
+      <article>
+        <h3>Mise à niveau en Arts appliqués</h3>
+        <p>
+          <em>2012 - 2013</em><br />
+          <strong>Lycée Jeanne d’Arc</strong><br />
+          Rouen (76)
+        </p>
+      </article>
+      <article>
+        <h3>Bac scientifique<br />
+          Mention Euro Allemand<br />
+          Mention Très bien</h3>
+        <p>
+          <em>2012</em><br />
+          <strong>Lycée Gustave Flaubert</strong><br />
+          Rouen (76)
+        </p>
+      </article>
     </section>
+
+    <hr />
+
+    <section>
+      <h2>Compétences</h2>
+
+      <h3>Maîtrise confirmée</h3>
+      <ul>
+        <li>Identité visuelle</li>
+        <li>Design d’interface</li>
+        <li>Graphisme</li>
+      </ul>
+      <ul>
+        <li>Sketch</li>
+        <li>Figma</li>
+        <li>InVision</li>
+        <li>Zeplin</li>
+        <li>Abstract</li>
+        <li>Photoshop</li>
+        <li>Illustrator</li>
+        <li>InDesign</li>
+        <li>Affinity Designer</li>
+        <li>Affinity Publisher</li>
+      </ul>
+
+      <h3>Maîtrise correcte</h3>
+      <ul>
+        <li>Méthodologies UX</li>
+        <li>Motion design</li>
+      </ul>
+      <ul>
+        <li>After Effects</li>
+        <li>Premiere</li>
+        <li>Affinity Photo</li>
+        <li>Git</li>
+      </ul>
+      <ul>
+        <li>HTML5 & CSS3</li>
+        <li>Javascript & JQuery</li>
+      </ul>
+
+      <h3>Langues</h3>
+      <ul>
+        <li>Français (langue maternelle)</li>
+        <li>Anglais (905/990 au TOEIC)</li>
+        <li>Allemand (niveau B2)</li>
+      </ul>
+    </section>
+
+    <hr />
+
+    <section>
+      <h2>Intérêts</h2>
+      <ul>
+        <li>Le journalisme et les médias</li>
+        <li>Le football américain</li>
+        <li>La société</li>
+        <li>Les alternatives</li>
+      </ul>
+    </section>
+
+    <hr />
+
+    <footer>
+      <p>Je fais partie de la Coopérative d’Activité et d’Emploi Coopaname</p>
+    </footer>
   </body>
 </html>
